# TronS

./: CMakeLists.txt  README.md  rebuild.bat
src/: main.cpp
src/misc/: game_preferences.h  game_types.h  game_utils.cpp  game_utils.h
src/network/: network_manager.cpp  network_manager.h
src/objects/: snake.cpp  snake.h
src/shaders/: fragment.glsl  shader.cpp  shader.h  vertex.glsl
src/world/: camera.cpp  camera.h  game.cpp  game.h
